--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,1 +1,282 @@
 // Продължи с твоя SCSS или обикновен CSS код тук.
+body, html {
+    background-color: #FDF8EC;
+}
+.navbar {
+    margin: 2em 10rem;
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    height: 8vh;
+    
+}
+.nav-info>a {
+    text-decoration: none;
+    color: #9B582E;
+}
+.nav-info>a:hover {
+    transition: 0.3s ease-out;
+    color: #533019;
+}
+.nav-home {
+    width: 20%;
+    align-content: center;
+    
+}
+.nav-info {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 75%;
+}
+.header {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.header {
+    display: flex;
+    align-content: center;
+    margin: auto 25%;
+}
+.header-top {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+.header>h1 {
+    margin: auto;
+    margin: auto 25%;
+    font-size: 32px;
+
+}
+
+.brown-heading {
+    color: #533019;
+}
+.red-heading {
+    color: #9B582E;
+}
+.header-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0px;
+    
+}
+.info {
+    height: 2.5em;
+    width: 16%;
+    margin-left: 5px;
+    border-radius: 32px;
+    color: #CA7111;
+    background-color: white;
+    border: 1px solid #CA7111
+
+}
+.info:hover {
+    transition: 0.2s ease-out;
+    background-color: #CA7111;
+    border: 1px solid white;
+    color: white;
+}
+.request, .description-button-request, .questions-request  {
+    width: 16%;
+    margin-right: 5px;
+    border-radius: 32px;
+    color: white;
+    background-color: #9B582E;
+    border: 1px solid #9B582E;
+}
+.request:hover, .description-button-request:hover, .questions-request:hover  {
+    transition: 0.2s ease-out;
+    color: #9B582E;
+    border: 1px solid #9B582E;
+    background-color: #FDF8EC;
+}
+.desserts {
+    margin: 4rem 8% auto;
+    display: flex;
+    flex-direction: row;
+    background-image: url("images/Vector(1).png");
+    background-size: cover;
+}
+.strawberry, .yoghurt, .sunflower, .bacon {
+    width: 25%;
+    margin-right: 1.75em;
+    background-color: #FBF4DF;
+    padding-bottom: 3em;
+    
+}
+.filler, .desserts>p, .desserts>h3, .Chef-filler{
+    margin: auto 25%;
+    
+}
+.section-info {
+    text-decoration: none;
+    color: #9B582E;
+    margin: 1em 25% 0px;
+}
+.section-info:hover, .footer-main > a :hover {
+    transition: 0.3s ease-in;
+    text-decoration: none;
+    color: #533019;
+}
+.Chef {
+    margin: 4rem 18% auto;
+
+    display: flex;
+
+}
+.Chef-img {
+    width: 34%;
+}
+.Chef-text {
+    display: flex;
+    width: 76%;
+}
+.Chef-text {
+    display: flex;
+    flex-direction: column;
+    margin-left: .5em ;
+    font-size: 60px ;
+}
+.Chef-text >p {
+    font-size: 18px;
+}
+
+
+
+
+@media (max-width: 1100px) {
+    .desserts {
+        display: flex;
+        flex-direction: column;
+    }
+    .Chef {
+        display: flex;
+        flex-direction: column;
+    }
+}
+.description {
+    background-color: #FBF4DF;
+    margin: 4em 8% auto;
+    width: 84%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.description-big {
+    display: flex;
+    flex-direction: column;
+    
+}
+.description-bacon, .description-strawberry, .description-sunflower, .description-yoghurt {
+    display: flex;
+    margin: .5em 10% auto;
+    background-color: white;
+    width: 80%;
+    border-radius: 16px;
+}
+
+.description-request {
+    display: flex;
+    background-color:#F9EECD ;
+}
+.description-button-request {
+    margin: 1.25em;
+}
+
+.ratings {
+    display: flex;
+    
+
+}
+.rating-heading {
+    margin-left:15%;
+    font-size: 48px;
+    margin-bottom:0px;
+}
+.reviews {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    margin-left: 25%;
+    margin-right: 10%;
+}
+
+.questions {
+    background-color: #FBF4DF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.questions-main {
+    width: 50%;
+    margin-top: 8em;
+    display: flex;
+}
+.questions-info {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    margin: auto 15% 1em auto
+}
+.placeholders {
+    display: flex;
+    flex-direction: column;
+    background-color: #F9EECD;
+    border-radius: 8px;
+    width: 70%;
+}
+.placeholders > input {
+    border-radius: 8px;
+    border: 1px solid;
+    margin: auto 2em;
+    
+}
+.big-placeholder {
+    height: 15%;
+}
+
+.questions-request {
+    margin: 3em 25%;
+    width: 35%;
+    height: 6ch;
+}
+.media {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 3em 25%;
+}
+.media h1 {
+    font-size: 80px;
+}
+.first-article{
+    margin: 3em ;
+}
+.second-article {
+    margin: auto 3em;
+
+}
+.footer     {
+    margin: auto 25%;
+    
+}
+.walnut {
+    margin: auto 45%;
+}
+.footer-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.footer-main a {
+    color: #9B582E;
+    text-decoration: none;
+    margin-left: 0.3em;
+}
